@@ -1,0 +1,21 @@
+Subject:      Re: Who was Izchak Miller?
+From:         "Jane D. Anonymous" <nobody@yale.edu>
+Date:         1996/04/28
+Message-Id:   <4lv7bc$oh@news.ycc.yale.edu>
+References:   <317C405E.5DFA@panix.com> <4lk6vl$gde@ns.oar.net>
+To:           75176.2330@compuserve.com
+Content-Type: text/plain; charset=us-ascii
+Organization: Yale University
+X-Url:        news:4lk6vl$gde@ns.oar.net
+Mime-Version: 1.0
+Newsgroups:   rec.games.roguelike.nethack
+X-Mailer:     Mozilla 1.1N (Macintosh; I; 68K)
+
+Hello there, Izchak Miller was my father.  When I was younger I spent 
+many a night, hunched over the keyboard with a cup of tea, playing 
+nethack with him and my brother.  my dad was a philosopher with a strong 
+weakness for fantasy/sci fi.  I remember when he started to get involved 
+with the Nethack team- my brother's Dungeons and Dragons monster book 
+found a regular place beside my dad's desk. it's nice to see him living 
+on in the game he loved so much :-).  
+                                                                  Tamar Miller
